argocd/infra/storage/democratic-ssd-nfs/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: democratic-ssd-nfs-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/csi-role: controller
  ingress: []
  egress:
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
